cleanup rest of the bots
