# src/core/core/api/__init__.py
@@ -8,7 +8,6 @@ from core.api import (
     config,
     dashboard,
     isalive,
-    presenters,
     publish,
     publishers,
     remote,
@@ -26,7 +25,6 @@ __all__ = [
     "config",
     "dashboard",
     "isalive",
-    "presenters",
     "publish",
     "publishers",
     "remote",
