# src/core/core/model/__init__.py
@@ -3,8 +3,6 @@ __all__ = [
     "role",
     "permission",
     "news_item",
-    "collectors_node",
-    "collector",
     "osint_source",
     "parameter",
     "parameter_value",
@@ -16,16 +14,11 @@ __all__ = [
     "acl_entry",
     "product_type",
     "product",
-    "presenters_node",
-    "presenter",
-    "publishers_node",
     "publisher_preset",
-    "publisher",
     "word_list",
     "asset",
     "bot",
-    "bots_node",
     "remote",
-    "tag_cloud",
     "token_blacklist",
+    "worker",
 ]
