# src/core/core/static/openapi3_0.yaml
@@ -2139,97 +2139,6 @@ paths:
                 $ref: '#/components/schemas/resp.auth.error'
         '404':
           $ref: "#/components/schemas/notFound"
-  /collectors/node:
-    post:
-      tags: [collectors]
-      summary: add collector node
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/collectors_node'
-      responses:
-        '200':
-          description: ID of the added collector node
-          content:
-            application/json:
-              schema:
-                type: integer
-        '401':
-          description: authorization error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/resp.auth.error'
-        '404':
-          $ref: "#/components/schemas/notFound"
-  /collectors/node/{collector_id}:
-    parameters:
-      - name: collector_id
-        in: path
-        required: true
-        schema:
-          type: string
-    get:
-      tags: [collectors]
-      summary: get specific collectors node
-      responses:
-        '200':
-          description: specific collectors node
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/collectors_node'
-        '401':
-          description: authorization error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/resp.auth.error'
-        '404':
-          $ref: "#/components/schemas/notFound"
-    put:
-      tags: [collectors]
-      summary: update the collector node
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/collectors_node'
-      responses:
-        '200':
-          description: ID of the updated collector node
-          content:
-            application/json:
-              schema:
-                type: string
-        '401':
-          description: authorization error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/resp.auth.error'
-        '404':
-          $ref: "#/components/schemas/notFound"
-    delete:
-      tags: [collectors]
-      summary: delete the collector node
-      responses:
-        '200':
-          description: DESCRIPTION
-          content:
-            application/json:
-              schema:
-                type: string
-                example:
-        '401':
-          description: authorization error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/resp.auth.error'
-        '404':
-          $ref: "#/components/schemas/notFound"
   /config/reload-enum-dictionaries/{dictionary_type}:
     parameters:
       - name: dictionary_type
@@ -5445,35 +5354,6 @@ components:
             id:
               type: string
 
-    collectors_node.new:
-      allOf:
-        - $ref: '#/components/schemas/collectors_node'
-    collectors_node:
-      type: object
-      properties:
-        id:
-          type: string
-        name:
-          type: string
-        description:
-          type: string
-        api_url:
-          type: string
-        api_key:
-          type: string
-        collectors:
-          type: array
-          items:
-            $ref: '#/components/schemas/collector'
-        status:
-          type: string
-        created:
-          type: string
-          format: date-time
-        last_seen:
-          type: string
-          format: date-time
-
     acl_entry.new:
       allOf:
         - $ref: '#/components/schemas/acl_entry'
@@ -5613,119 +5493,6 @@ components:
               format: date-time
             event_id:
               type: string
-
-    presenters_node.new:
-      allOf:
-        - $ref: '#/components/schemas/presenters_node'
-
-    presenters_node:
-      type: object
-      properties:
-        id:
-          type: string
-        name:
-          type: string
-        description:
-          type: string
-        api_url:
-          type: string
-        api_key:
-          type: string
-        presenters:
-          type: array
-          items:
-            $ref: '#/components/schemas/presenter'
-    presenters_node.presentation:
-      allOf:
-       - $ref: '#/components/schemas/presenters_node'
-       - $ref: '#/components/schemas/presentation'
-
-    publishers_node.new:
-      allOf:
-        - $ref: '#/components/schemas/publishers_node'
-
-    publishers_node:
-      type: object
-      properties:
-        id:
-          type: string
-        name:
-          type: string
-        description:
-          type: string
-        api_url:
-          type: string
-        api_key:
-          type: string
-        publishers:
-          type: array
-          items:
-            $ref: '#/components/schemas/publisher'
-    publishers_node.presentation:
-      allOf:
-        - $ref: '#/components/schemas/publishers_node'
-        - $ref: '#/components/schemas/presentation'
-
-    publisher.new:
-      allOf:
-        - $ref: '#/components/schemas/publisher'
-
-    publisher:
-      type: object
-      properties:
-        id:
-          type: string
-        type:
-          type: string
-        name:
-          type: string
-        description:
-          type: string
-        parameters:
-          type: array
-          items:
-            $ref: '#/components/schemas/parameter'
-    publisher_input:
-      type: object
-      properties:
-        type:
-          type: string
-        parameter_values:
-          type: array
-          items:
-            $ref: '#/components/schemas/parameter_value'
-        mime_type:
-          type: string
-        data:
-          type: string
-        message_title:
-          type: string
-        message_body:
-          type: string
-        recipients:
-          type: array
-          items:
-            type: string
-
-    tag_cloud.new:
-      allOf:
-        - $ref: '#/components/schemas/tag_cloud'
-
-    tag_cloud.base:
-      type: object
-      properties:
-        word:
-          type: string
-        word_quantity:
-          type: integer
-        collected:
-          $ref: '#/components/schemas/date'
-    tag_cloud:
-      allOf:
-        - $ref: '#/components/schemas/tag_cloud.base'
-    grouped_words:
-      allOf:
-        - $ref: '#/components/schemas/tag_cloud.base'
 
     presenter.new:
       allOf:
